apps/staging/profilarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profilarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - profilarr.christophervestman.com
      secretName: profilarr-tls
  rules:
    - host: profilarr.christophervestman.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: profilarr
                port:
                  number: 6868
